--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -4,8 +4,7 @@
       <div class="contact-info">
         <h2 class="section-title">Vamos Trabalhar Juntos?</h2>
         <p class="section-description">
-          Estou sempre aberta a discutir novos projetos, ideias criativas ou oportunidades 
-          para fazer parte da sua visão. Entre em contato e vamos transformar sua ideia em realidade!
+          Estou sempre aberta a discutir novos projetos de design, ideias criativas ou oportunidades para colaborar em produtos digitais incríveis. Vamos transformar sua visão em uma experiência memorável!
         </p>
         
         <div class="contact-methods">
@@ -13,7 +12,7 @@
             <div class="method-icon">📧</div>
             <div class="method-content">
               <h3>Email</h3>
-              <p>ruth.gomes&#64;email.com</p>
+              <p>ruthgmdq&#64;email.com</p>
             </div>
           </div>
           
@@ -21,7 +20,7 @@
             <div class="method-icon">📱</div>
             <div class="method-content">
               <h3>Telefone</h3>
-              <p>+55 (11) 99999-9999</p>
+              <p>+55 (92) 99294-5676</p>
             </div>
           </div>
           
@@ -29,7 +28,7 @@
             <div class="method-icon">📍</div>
             <div class="method-content">
               <h3>Localização</h3>
-              <p>São Paulo, Brasil</p>
+              <p>Manaus, Brasil</p>
             </div>
           </div>
         </div>
@@ -37,9 +36,8 @@
         <div class="social-links">
           <h3>Redes Sociais</h3>
           <div class="social-icons">
-            <a href="#" class="social-icon" title="LinkedIn">💼</a>
-            <a href="#" class="social-icon" title="GitHub">💻</a>
-            <a href="#" class="social-icon" title="Twitter">🐦</a>
+            <a href="https://www.linkedin.com/in/ruthgomesdque" class="social-icon" title="LinkedIn">💼</a>
+            <a href="https://github.com/ruthgomes" class="social-icon" title="GitHub">💻</a>
             <a href="#" class="social-icon" title="Instagram">📷</a>
           </div>
         </div>
