--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="footer-content">
       <div class="footer-brand">
-        <h3>RUTH GOMES</h3>
-        <p>Full Stack Developer & Tech Consultant</p>
+        <h3>RUTH GOMES DUQUE</h3>
+        <p>UX/UI Designer & Frontend Developer</p>
       </div>
       
       <div class="footer-links">
@@ -12,25 +12,25 @@
           <ul>
             <li><a href="#hero">Início</a></li>
             <li><a href="#about">Sobre</a></li>
-            <li><a href="#services">Serviços</a></li>
             <li><a href="#projects">Projetos</a></li>
+            <li><a href="#contact">Contato</a></li>
           </ul>
         </div>
         
         <div class="link-column">
-          <h4>Serviços</h4>
+          <h4>Especialidades</h4>
           <ul>
-            <li><a href="#services">Frontend</a></li>
-            <li><a href="#services">Backend</a></li>
-            <li><a href="#services">DevOps</a></li>
-            <li><a href="#services">Consultoria</a></li>
+            <li><a href="#projects">UX Design</a></li>
+            <li><a href="#projects">UI Design</a></li>
+            <li><a href="#projects">Frontend</a></li>
+            <li><a href="#projects">Design Systems</a></li>
           </ul>
         </div>
         
         <div class="link-column">
           <h4>Contato</h4>
           <ul>
-            <li><a href="#contact">Solicitar Orçamento</a></li>
+            <li><a href="#contact">Orçamento</a></li>
             <li><a href="mailto:ruth.gomes@email.com">Email</a></li>
             <li><a href="tel:+5511999999999">Telefone</a></li>
           </ul>
@@ -39,8 +39,8 @@
     </div>
     
     <div class="footer-bottom">
-      <p>&copy; {{ currentYear }} Ruth Gomes. Todos os direitos reservados.</p>
-      <p>Desenvolvido com 💜 e Angular</p>
+      <p>&copy; {{ currentYear }} Ruth Gomes Duque. Todos os direitos reservados.</p>
+      <p>Design com 💜 e código com Angular</p>
     </div>
   </div>
 </footer>
